deployment/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prd-ingress
spec:
  rules:
  - host: s3.prd.local
    http:
      paths:
      - backend:
          service:
            name: s3
            port:
              number: 9001
        path: /
        pathType: Prefix

  - host: spark-hs.prd.local
    http:
      paths:
      - backend:
          service:
            name: spark-history-server
            port:
              number: 18080
        path: /
        pathType: Prefix
  - host: spark-ui.prd.local
    http:
      paths:
      - backend:
          service:
            name: spark-reverse-proxy
            port:
              number: 8000
        path: /
        pathType: Prefix
